--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="col-lg-9 my-auto">
           <!--<div class="header-content mx-auto" style="width:80%">-->
           <div class="header-content mx-auto" >  
-            <a href="#download" style="letter-spacing: 15px; font-size:45px; " class="btn btn-outline btn-xl js-scroll-trigger">SunnySide</a>
+            <a href="#download" style="letter-spacing: 15px; " class="btn btn-outline btn-xl js-scroll-trigger">SunnySide</a>
             <h1 id="1p" style="padding:50px 0px" class="mb-5">We will give you health sunshine, and I like that</h1></div>
             
           </div>
