--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
             </div>
           </div>
         </div>-->
-        <div class="col-lg-8 my-auto">
-          <div style="width:1200px" class="container-fluid">
+        <div class="col-lg-12 my-auto">
+          <div class="container-fluid">
             <div class="row">
               <div class="col-lg-4">
                 <div class="feature-item">
@@ -131,7 +131,7 @@
                   <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
                 </div>
               </div>
-              <div class="col-lg-44">
+              <div class="col-lg-4">
                 <div class="feature-item">
                   <i class="icon-camera text-primary"></i>
                   <h3>한정호 S/W</h3>
