--- a/index.html
+++ b/index.html
@@ -127,21 +127,21 @@
               <div class="col-lg-4">
                 <div class="feature-item">
                   <i class="icon-screen-smartphone text-primary"></i>
-                  <h3>박수연 CL</h3>
+                  <h3>김민준 대장</h3>
                   <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="feature-item">
                   <i class="icon-camera text-primary"></i>
-                  <h3>한정호 S/W</h3>
+                  <h3>박수연 전략</h3>
                   <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="feature-item">
                   <i class="icon-camera text-primary"></i>
-                  <h3>김민준 H/W</h3>
+                  <h3>조태식 기구</h3>
                   <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
                 </div>
               </div>
@@ -150,7 +150,7 @@
               <div class="col-lg-6">
                 <div class="feature-item">
                   <i class="icon-present text-primary"></i>
-                  <h3>조태식 기구</h3>
+                  <h3>한정호 S/W</h3>
                   <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
                 </div>
               </div>
