video bg for mobile
video bg for mobile

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 </head>
 
 <body id="page-top">
-  <div class="video_wrap" style="position:absolute; z-index: -1000;" > <iframe src="https://www.youtube.com/embed/7xE-uoeogjM?autoplay=1;loop=1;playlist=7xE-uoeogjM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
-    
-  </div>
+  
+
+
 
   <div><h2>SunnySide</h2></div>
 
@@ -78,7 +78,9 @@
 
   <header class="masthead">
    
+    <div class="video_wrap masthead" style="position:absolute; z-index: -1000;" > <iframe src="https://www.youtube.com/embed/7xE-uoeogjM?autoplay=1;loop=1;playlist=7xE-uoeogjM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
 
+    </div>
 
     <div class="container h-100">
       
