change the video source
youtube -> vimeo

--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
-        </ul>
+        </ul>`
       </div>
     </div>
   </nav>
 
   <header class="masthead">
    
-    <div class="video_wrap masthead" style="position:absolute; z-index: -1000;" > <iframe src="https://www.youtube.com/embed/7xE-uoeogjM?autoplay=1;loop=1;playlist=7xE-uoeogjM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+    <div class="video_wrap masthead" style="position:absolute;" > <iframe title="vimeo-player" src="https://player.vimeo.com/video/420939562?autoplay=1&loop=1&autopause=0" width="640" height="360" frameborder="0" allow="autoplay;" allowfullscreen></iframe> 
 
     </div>
 
@@ -88,8 +88,8 @@
         <div class="col-lg-9 my-auto">
           <!--<div class="header-content mx-auto" style="width:80%">-->
           <div class="header-content mx-auto" >  
-            <a href="#download" style="letter-spacing: 15px; " class="btn btn-outline btn-xl js-scroll-trigger">SunnySide</a>
-            <h1 id="1p" style="padding:50px 0px" class="mb-5">We will give you health sunshine</h1></div>
+            <a href="#download" style="letter-spacing: 15px; " class="btn btn-outline btn-xl js-scroll-trigger text-blur-out">SunnySide</a>
+            <h1 id="1p" style="padding:50px 0px" class="mb-5 text-blur-out">Anytime, Anywhere</h1></div>
             
           </div>
         </div>
