muted is needed for mobile autoplay

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <header class="masthead">
    
-    <div class="video_wrap masthead" style="position:absolute;" > <iframe title="vimeo-player" src="https://player.vimeo.com/video/420939562?autoplay=1&loop=1&autopause=0" width="640" height="360" frameborder="0" allow="autoplay;" allowfullscreen></iframe> 
+    <div class="video_wrap masthead" style="position:absolute;" > <iframe title="vimeo-player" src="https://player.vimeo.com/video/420939562?autoplay=1&loop=1&autopause=0&muted=1" width="640" height="360" frameborder="0" allow="autoplay;" allowfullscreen></iframe> 
 
     </div>
 
