--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container">
+    <div class="container" style="margin-left: 0;">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">Sunny Side</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
