--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container" style="margin-left: 0;">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Sunny Side</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Sunny Five</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -70,7 +70,7 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
-        </ul>`
+        </ul>
       </div>
     </div>
   </nav>
@@ -88,7 +88,7 @@
         <div class="col-lg-9 my-auto">
           <!--<div class="header-content mx-auto" style="width:80%">-->
           <div class="header-content mx-auto" >  
-            <a href="#download" style="letter-spacing: 15px; " class="btn btn-outline btn-xl js-scroll-trigger text-blur-out">SunnySide</a>
+            <a href="#download" style="letter-spacing: 15px; " class="btn btn-outline btn-xl js-scroll-trigger text-blur-out">SunnyFive</a>
             <h1 id="1p" style="padding:50px 0px" class="mb-5 text-blur-out">Anytime, Anywhere</h1></div>
             
           </div>
@@ -116,11 +116,15 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 mx-auto">
-          <h2 class="section-heading">Discover what all the buzz is about!</h2>
-          <p>Our app is available on any mobile device! Download now to get started!</p>
+          <h2 class="section-heading">Healthy Sunlight, Anytime, Anywhere</h2>
+          <p></p>
+          <p>High CRI * Full Spectrum natural sunlight</p>
+          <p>Health effects such as vitaminD synthesis through uvb</p>
+          <p>Natural sunlight that you can control in your hand</p>
+          <p>Happy life with sunlight without time / place restrictions</p>
           <div class="badges">
-            <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
-            <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
+           <!-- <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
+            <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>-->
           </div>
         </div>
       </div>
