section switch and rename

--- a/index.html
+++ b/index.html
@@ -62,10 +62,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#download">Download</a>
+            <a class="nav-link js-scroll-trigger" href="#download">Sunny Side</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#features">Features</a>
+            <a class="nav-link js-scroll-trigger" href="#cta">History</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#features">Members</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -131,6 +134,18 @@
     </div>
   </section>
 
+ 
+
+  <section class="cta" id="cta">
+    <div class="cta-content">
+      <div class="container">
+        <h2>Stop waiting.<br>Start building.</h2>
+        <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>
+      </div>
+    </div>
+    <div class="overlay"></div>
+  </section>
+
   <section class="features" id="features">
     <div class="container">
       <div class="section-heading text-center">
@@ -158,7 +173,7 @@
               <div class="col-lg-4">
                 <div class="feature-item">
                   <i class="icon-screen-smartphone text-primary"></i>
-                  <h3>김민준 대장</h3>
+                  <h3>김민준 강남구 통합짱</h3>
                   <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
                 </div>
               </div>
@@ -197,16 +212,6 @@
         </div>
       </div>
     </div>
-  </section>
-
-  <section class="cta">
-    <div class="cta-content">
-      <div class="container">
-        <h2>Stop waiting.<br>Start building.</h2>
-        <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>
-      </div>
-    </div>
-    <div class="overlay"></div>
   </section>
 
   <section class="contact bg-primary" id="contact">
