p 모바일 버전 추가

--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
         <div class="col-md-8 mx-auto">
           <h2 class="section-heading">Healthy Sunlight, Anytime, Anywhere</h2>
           <p></p>
-          <p>High CRI * Full Spectrum natural sunlight</p>
-          <p>Health effects such as vitaminD synthesis through uvb</p>
-          <p>Natural sunlight that you can control in your hand</p>
-          <p>Happy life with sunlight without time / place restrictions</p>
+          <p class="sectionp">High CRI * Full Spectrum natural sunlight</p>
+          <p class="sectionp">Health effects such as vitaminD synthesis through uvb</p>
+          <p class="sectionp">Natural sunlight that you can control in your hand</p>
+          <p class="sectionp">Happy life with sunlight without time / place restrictions</p>
           <div class="badges">
            <!-- <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
             <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>-->
