--- a/index.html
+++ b/index.html
@@ -139,8 +139,14 @@
   <section class="cta" id="cta">
     <div class="cta-content">
       <div class="container">
-        <h2>Stop waiting.<br>Start building.</h2>
-        <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>
+        <!--<h2>Stop waiting.<br>Start building.</h2>
+        <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>-->
+        <h2>History</h2>
+        <h5>2019.03</h5>
+        <h5>2019.10</h5>
+        <h5>2019.11</h5>
+        <h5>2020.01</h5>
+        <h5>2020.06</h5>
       </div>
     </div>
     <div class="overlay"></div>
