--- a/map.html
+++ b/map.html
@@ -3,6 +3,15 @@
 <html>
 
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-169303598-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-169303598-1');
+</script>
     <link href="css/map.css" rel="stylesheet">
     <style>
 
