--- a/map.html
+++ b/map.html
@@ -38,7 +38,7 @@
           <div class="container-fluid">
             <div class="row">
            <div class="col-lg-8 my-auto">
-    <h3>My Google Maps Demo</h3>
+    <h3>Hello - Sunny5ive realtime camera map</h3>
 
 </div>
     <!--The div element for the map -->
