--- a/map.html
+++ b/map.html
@@ -71,7 +71,7 @@ float: left;
     <!--The div element for the map -->
     <div id = "yt">
       <div id = "video" style ="display:none">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/eE6VVJ3hvv8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/eE6VVJ3hvv8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="true"></iframe>
       </div>
       <div id ="map"></div>
     </div>
