--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
-          <li class="nav-item">
+          <li style = "display:none"  class="nav-item">
             <a class="nav-link js-scroll-trigger" href="map.html">Map</a>
           </li>
         </ul>
