--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
               <div class="col-lg-4">
                 <div class="feature-item">
                   <i class="icon-screen-smartphone text-primary"></i>
-                  <h3>김민준 강남구 통합짱</h3>
+                  <h3>김민준 CEO</h3>
                   <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
                 </div>
               </div>
@@ -273,6 +273,152 @@
     </div>
   </footer>
 
+  <button id="auth-button" hidden>Authorize</button>
+
+  <h1>Hello Analytics</h1>
+  
+  <textarea cols="80" rows="20" id="query-output"></textarea>
+  
+  <script>
+  
+    // Replace with your client ID from the developer console.
+    var CLIENT_ID = '1088839504488-9m4k54ecppvpqu3uk80q73oj0o4213cm.apps.googleusercontent.com';
+  
+    // Set authorized scope.
+    var SCOPES = ['https://www.googleapis.com/auth/analytics.readonly'];
+  
+  
+    function authorize(event) {
+      // Handles the authorization flow.
+      // `immediate` should be false when invoked from the button click.
+      var useImmdiate = event ? false : true;
+      var authData = {
+        client_id: CLIENT_ID,
+        scope: SCOPES,
+        immediate: useImmdiate
+      };
+  
+      gapi.auth.authorize(authData, function(response) {
+        var authButton = document.getElementById('auth-button');
+        if (response.error) {
+          authButton.hidden = false;
+        }
+        else {
+          authButton.hidden = true;
+          queryAccounts();
+        }
+      });
+    }
+  
+  
+  function queryAccounts() {
+    // Load the Google Analytics client library.
+    gapi.client.load('analytics', 'v3').then(function() {
+  
+      // Get a list of all Google Analytics accounts for this user
+      gapi.client.analytics.management.accounts.list().then(handleAccounts);
+    });
+  }
+  
+  
+  function handleAccounts(response) {
+    // Handles the response from the accounts list method.
+    if (response.result.items && response.result.items.length) {
+      // Get the first Google Analytics account.
+      var firstAccountId = response.result.items[0].id;
+  
+      // Query for properties.
+      queryProperties(firstAccountId);
+    } else {
+      console.log('No accounts found for this user.');
+    }
+  }
+  
+  
+  function queryProperties(accountId) {
+    // Get a list of all the properties for the account.
+    gapi.client.analytics.management.webproperties.list(
+        {'accountId': accountId})
+      .then(handleProperties)
+      .then(null, function(err) {
+        // Log any errors.
+        console.log(err);
+    });
+  }
+  
+  
+  function handleProperties(response) {
+    // Handles the response from the webproperties list method.
+    if (response.result.items && response.result.items.length) {
+  
+      // Get the first Google Analytics account
+      var firstAccountId = response.result.items[0].accountId;
+  
+      // Get the first property ID
+      var firstPropertyId = response.result.items[0].id;
+  
+      // Query for Views (Profiles).
+      queryProfiles(firstAccountId, firstPropertyId);
+    } else {
+      console.log('No properties found for this user.');
+    }
+  }
+  
+  
+  function queryProfiles(accountId, propertyId) {
+    // Get a list of all Views (Profiles) for the first property
+    // of the first Account.
+    gapi.client.analytics.management.profiles.list({
+        'accountId': accountId,
+        'webPropertyId': propertyId
+    })
+    .then(handleProfiles)
+    .then(null, function(err) {
+        // Log any errors.
+        console.log(err);
+    });
+  }
+  
+  
+  function handleProfiles(response) {
+    // Handles the response from the profiles list method.
+    if (response.result.items && response.result.items.length) {
+      // Get the first View (Profile) ID.
+      var firstProfileId = response.result.items[0].id;
+  
+      // Query the Core Reporting API.
+      queryCoreReportingApi(firstProfileId);
+    } else {
+      console.log('No views (profiles) found for this user.');
+    }
+  }
+  
+  
+  function queryCoreReportingApi(profileId) {
+    // Query the Core Reporting API for the number sessions for
+    // the past seven days.
+    gapi.client.analytics.data.ga.get({
+      'ids': 'ga:' + profileId,
+      'start-date': '7daysAgo',
+      'end-date': 'today',
+      'metrics': 'ga:sessions'
+    })
+    .then(function(response) {
+      var formattedJson = JSON.stringify(response.result, null, 2);
+      document.getElementById('query-output').value = formattedJson;
+    })
+    .then(null, function(err) {
+        // Log any errors.
+        console.log(err);
+    });
+  }
+  
+    // Add an event listener to the 'auth-button'.
+    document.getElementById('auth-button').addEventListener('click', authorize);
+  </script>
+  
+  <script src="https://apis.google.com/js/client.js?onload=authorize"></script>
+  
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
