--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
         <!--<h2>Stop waiting.<br>Start building.</h2>
         <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>-->
         <h2>History</h2>
-        <h5>2019.03</h5>
-        <h5>2019.10</h5>
-        <h5>2019.11</h5>
-        <h5>2020.01</h5>
-        <h5>2020.06</h5>
+        <h5>2019.03 Samsung Electronics, C-Lab, Start with SunnySide</h5>
+        <h5>2019.10 Development of Prototype and Exhibition of Samsung C&T Raemian Gallery</h5>
+        <h5>2019.11 Samsung Electronics, C-Lab Fair Exhibition</h5>
+        <h5>2020.01 CES 2020 Eureka Park Exhibition</h5>
+        <h5>2020.06 Samsung Electronics Spin-off Company, Sunny Five Establishment</h5>
       </div>
     </div>
     <div class="overlay"></div>
@@ -167,7 +167,7 @@
     <div class="container">
       <div class="section-heading text-center">
         <h2>Members</h2>
-        <p class="text-muted">Check out what you can do with this app theme!</p>
+        <p class="text-muted">SunnyFive co-founders</p>
         <hr>
       </div>
       <div class="row">
@@ -191,21 +191,21 @@
                 <div class="feature-item">
                   <i class="icon-screen-smartphone text-primary"></i>
                   <h3>김민준 CEO</h3>
-                  <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                  <!--<p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>-->
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="feature-item">
                   <i class="icon-camera text-primary"></i>
-                  <h3>박수연 전략</h3>
-                  <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                  <h3>박수연 COO</h3>
+                  <!--<p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>-->
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="feature-item">
                   <i class="icon-camera text-primary"></i>
-                  <h3>조태식 기구</h3>
-                  <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                  <h3>조태식 CSO</h3>
+                  <!--<p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>-->
                 </div>
               </div>
             </div>
@@ -213,15 +213,15 @@
               <div class="col-lg-6">
                 <div class="feature-item">
                   <i class="icon-present text-primary"></i>
-                  <h3>한정호 S/W</h3>
-                  <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+                  <h3>한정호 CMO</h3>
+                  <!--<p class="text-muted">As always, this theme is free to download and use for any purpose!</p>-->
                 </div>
               </div>
               <div class="col-lg-6">
                 <div class="feature-item">
                   <i class="icon-lock-open text-primary"></i>
-                  <h3>김명겸 S/W</h3>
-                  <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
+                  <h3>김명겸 CTO</h3>
+                  <!--<p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>-->
                 </div>
               </div>
             </div>
@@ -273,152 +273,6 @@
     </div>
   </footer>
 
-  <button id="auth-button" hidden>Authorize</button>
-
-  <h1>Hello Analytics</h1>
-  
-  <textarea cols="80" rows="20" id="query-output"></textarea>
-  
-  <script>
-  
-    // Replace with your client ID from the developer console.
-    var CLIENT_ID = '1088839504488-9m4k54ecppvpqu3uk80q73oj0o4213cm.apps.googleusercontent.com';
-  
-    // Set authorized scope.
-    var SCOPES = ['https://www.googleapis.com/auth/analytics.readonly'];
-  
-  
-    function authorize(event) {
-      // Handles the authorization flow.
-      // `immediate` should be false when invoked from the button click.
-      var useImmdiate = event ? false : true;
-      var authData = {
-        client_id: CLIENT_ID,
-        scope: SCOPES,
-        immediate: useImmdiate
-      };
-  
-      gapi.auth.authorize(authData, function(response) {
-        var authButton = document.getElementById('auth-button');
-        if (response.error) {
-          authButton.hidden = false;
-        }
-        else {
-          authButton.hidden = true;
-          queryAccounts();
-        }
-      });
-    }
-  
-  
-  function queryAccounts() {
-    // Load the Google Analytics client library.
-    gapi.client.load('analytics', 'v3').then(function() {
-  
-      // Get a list of all Google Analytics accounts for this user
-      gapi.client.analytics.management.accounts.list().then(handleAccounts);
-    });
-  }
-  
-  
-  function handleAccounts(response) {
-    // Handles the response from the accounts list method.
-    if (response.result.items && response.result.items.length) {
-      // Get the first Google Analytics account.
-      var firstAccountId = response.result.items[0].id;
-  
-      // Query for properties.
-      queryProperties(firstAccountId);
-    } else {
-      console.log('No accounts found for this user.');
-    }
-  }
-  
-  
-  function queryProperties(accountId) {
-    // Get a list of all the properties for the account.
-    gapi.client.analytics.management.webproperties.list(
-        {'accountId': accountId})
-      .then(handleProperties)
-      .then(null, function(err) {
-        // Log any errors.
-        console.log(err);
-    });
-  }
-  
-  
-  function handleProperties(response) {
-    // Handles the response from the webproperties list method.
-    if (response.result.items && response.result.items.length) {
-  
-      // Get the first Google Analytics account
-      var firstAccountId = response.result.items[0].accountId;
-  
-      // Get the first property ID
-      var firstPropertyId = response.result.items[0].id;
-  
-      // Query for Views (Profiles).
-      queryProfiles(firstAccountId, firstPropertyId);
-    } else {
-      console.log('No properties found for this user.');
-    }
-  }
-  
-  
-  function queryProfiles(accountId, propertyId) {
-    // Get a list of all Views (Profiles) for the first property
-    // of the first Account.
-    gapi.client.analytics.management.profiles.list({
-        'accountId': accountId,
-        'webPropertyId': propertyId
-    })
-    .then(handleProfiles)
-    .then(null, function(err) {
-        // Log any errors.
-        console.log(err);
-    });
-  }
-  
-  
-  function handleProfiles(response) {
-    // Handles the response from the profiles list method.
-    if (response.result.items && response.result.items.length) {
-      // Get the first View (Profile) ID.
-      var firstProfileId = response.result.items[0].id;
-  
-      // Query the Core Reporting API.
-      queryCoreReportingApi(firstProfileId);
-    } else {
-      console.log('No views (profiles) found for this user.');
-    }
-  }
-  
-  
-  function queryCoreReportingApi(profileId) {
-    // Query the Core Reporting API for the number sessions for
-    // the past seven days.
-    gapi.client.analytics.data.ga.get({
-      'ids': 'ga:' + profileId,
-      'start-date': '7daysAgo',
-      'end-date': 'today',
-      'metrics': 'ga:sessions'
-    })
-    .then(function(response) {
-      var formattedJson = JSON.stringify(response.result, null, 2);
-      document.getElementById('query-output').value = formattedJson;
-    })
-    .then(null, function(err) {
-        // Log any errors.
-        console.log(err);
-    });
-  }
-  
-    // Add an event listener to the 'auth-button'.
-    document.getElementById('auth-button').addEventListener('click', authorize);
-  </script>
-  
-  <script src="https://apis.google.com/js/client.js?onload=authorize"></script>
-  
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
