--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
         <div class="col-md-8 mx-auto">
           <h2 class="section-heading">Healthy Sunlight, Anytime, Anywhere</h2>
           <p></p>
-          <p class="sectionp">High CRI * Full Spectrum natural sunlight</p>
-          <p class="sectionp">Health effects such as vitaminD synthesis through uvb</p>
-          <p class="sectionp">Natural sunlight that you can control in your hand</p>
-          <p class="sectionp">Happy life with sunlight without time / place restrictions</p>
+          <p class="section">High CRI * Full Spectrum natural sunlight</p>
+          <p class="section">Health effects such as vitaminD synthesis through uvb</p>
+          <p class="section">Natural sunlight that you can control in your hand</p>
+          <p class="section">Happy life with sunlight without time / place restrictions</p>
           <div class="badges">
            <!-- <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
             <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>-->
@@ -233,26 +233,44 @@
 
   <section class="contact bg-primary" id="contact">
     <div class="container">
-      <h2>We
-        <i class="fas fa-heart"></i>
-        new friends!</h2>
-      <ul class="list-inline list-social">
-        <li class="list-inline-item social-twitter">
-          <a href="#">
-            <i class="fab fa-twitter"></i>
-          </a>
-        </li>
-        <li class="list-inline-item social-facebook">
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-        </li>
-        <li class="list-inline-item social-google-plus">
-          <a href="#">
-            <i class="fab fa-google-plus-g"></i>
-          </a>
-        </li>
-      </ul>
+      <div class="col-lg-12 my-auto">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-6">
+              <p style="text-align: left;" class="section">SunnyFive CEO, Minjun Kim</p>
+              <p style="text-align: left;" class="section">Email : mj@sunnyfive.net</p>
+              <p style="text-align: left;" class="section">Phone : +82-10-4120-0042</p>
+              <p style="text-align: left;" class="section">Address : ASIA ICT 205, 4, Jagok-ro 7-gil, Gangnam-gu, Seoul, Republic of Korea</p>
+              </div>
+
+              <div class="col-lg-6">
+                <h2>We
+                  <i class="fas fa-heart"></i>
+                  new friends!</h2>
+                <ul class="list-inline list-social">
+                  <li class="list-inline-item social-twitter">
+                    <a href="#">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </li>
+                  <li class="list-inline-item social-facebook">
+                    <a href="#">
+                      <i class="fab fa-facebook-f"></i>
+                    </a>
+                  </li>
+                  <li class="list-inline-item social-google-plus">
+                    <a href="#">
+                      <i class="fab fa-google-plus-g"></i>
+                    </a>
+                  </li>
+                </ul>
+
+              </div>
+              </div>
+              </div>
+              </div>
+              </div>
+
     </div>
   </section>
 
