--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
       <div class="col-lg-9 my-auto" style="z-index: 10000">
         <!--<div class="header-content mx-auto" style="width:80%">-->
         <div class="header-content mx-auto" >  
-          <a href="#download" style="position:absolute; top:300px; left:50%; transform:translate(-50%,-50%); letter-spacing: 15px; " class="btn btn-outline btn-xl js-scroll-trigger text-blur-out">SunnyFive</a>
-          <h1 id="1p" style="padding:50px 0px; margin-top: 400px;" class="mb-5 text-blur-out">Anytime, Anywhere</h1></div>
+          <a href="#download" style="position:absolute; left:50%; transform:translate(-50%,-50%); letter-spacing: 15px; " class="mb-4 btn btn-outline btn-xl js-scroll-trigger text-blur-out">SunnyFive</a>
+          <h1 id="1p" style="padding:50px 0px;" class="mb-5 text-blur-out">Anytime, Anywhere</h1></div>
           
         </div>
       </div>
