--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div class="col-lg-9 my-auto" style="z-index: 10000">
         <!--<div class="header-content mx-auto" style="width:80%">-->
         <div class="header-content mx-auto" >  
-          <a href="#download" style="position:absolute; letter-spacing: 15px; " class="mb-4 btn btn-outline btn-xl js-scroll-trigger text-blur-out">SunnyFive</a>
+          <a href="#download" style="position:absolute; " class="mb-4 btn btn-outline btn-xl js-scroll-trigger text-blur-out">SunnyFive</a>
           <h1 id="1p" style="padding:50px 0px;" class="mb-5 text-blur-out">Anytime, Anywhere</h1></div>
           
         </div>
