--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="board.html">공 고</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="news.html">보도 자료</a>
+          </li>
           <li style = "display:none"  class="nav-item">
             <a class="nav-link js-scroll-trigger" href="map.html">Map</a>
           </li>
@@ -128,7 +134,7 @@
   <section class="download bg-primary text-center" id="download">
     <div class="container">
       <div class="row">
-        <div class="col-md-8 mx-auto">
+        <div class="col-md-8 mx-auto" >
           <h2 class="section-heading">Healthy Sunlight, Anytime, Anywhere</h2>
           <p></p>
           <p class="section">High CRI * Full Spectrum natural sunlight</p>
@@ -140,7 +146,7 @@
             <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>-->
           </div>
         </div>
-      </div>
+    </div>
     </div>
   </section>
 
@@ -253,7 +259,7 @@
                     </a>
                   </li>
                   <li class="list-inline-item social-facebook">
-                    <a href="#">
+                    <a href="https://www.facebook.com/sunnyfive.sunnyfive.12">
                       <i class="fab fa-facebook-f"></i>
                     </a>
                   </li>
