공고, 보도자료

--- a/news.html
+++ b/news.html
@@ -100,12 +100,12 @@
     <div class="container h-auto" >
       
       
-      <div class="col-lg-9 my-auto" style="z-index: 10000">
+      <div class="col-lg-9 my-auto" style="z-index: 10000; max-width:100%">
         <!--<div class="header-content mx-auto" style="width:80%">-->
         <div class="header-content mx-auto" >  
           <!--<a href="#download" style="position:absolute; " class="mb-4 btn btn-outline btn-xl js-scroll-trigger text-blur-out">SunnyFive</a>
           <h1 id="1p" style="padding:50px 0px;" class="mb-5 text-blur-out">Anytime, Anywhere</h1></div>-->
-          <h1 id="1p" style="padding:0px 0px; margin-top: 100px; color: black;" >보도 자료</h1></div>
+          <h1 id="1p" style="padding:0px 0px; margin-top: 100px; color: black; text-align: center;" >보도 자료</h1></div>
         </div>
       </div>
 
