게시판과 홈페이지 링크

--- a/board.html
+++ b/board.html
@@ -71,16 +71,16 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger navbar-board" href="#download">Sunny Side</a>
+            <a class="nav-link js-scroll-trigger navbar-board" href="./index.html#download">Sunny Side</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger navbar-board" href="#cta">History</a>
+            <a class="nav-link js-scroll-trigger navbar-board" href="./index.html#cta">History</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger navbar-board" href="#features">Members</a>
+            <a class="nav-link js-scroll-trigger navbar-board" href="./index.html#features">Members</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger navbar-board" href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger navbar-board" href="./index.html#contact">Contact</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger navbar-board" href="board.html">공 고</a>
@@ -157,7 +157,7 @@ background-color: #ffffff;
  
 .board__container {
 margin: 30px 30px 30px 30px;
-height: 220px;
+*/height: 220px;*/
 padding-top: 10px;
 padding-bottom: 10px;
 border-radius: 15px;
@@ -271,7 +271,7 @@ transform: scale(0.93);
 <body>
 <main class="main__container">
 <div class="board__container">
-<table class="board">
+<table class="board type10">
 <thead class="board__table-head">
 <tr class="board__titles">
 <th class="board__column">번호</th>
@@ -310,7 +310,7 @@ transform: scale(0.93);
         <tr class="board__content">
           <td class="board__content-column">4</td>
           <a href="#" id="link-to-content0">
-            <td class="board__content-column"  onClick="window.open('https://techrecipe.co.kr/posts/17313','','')">햇빛 조명을 그대로 본뜬 스마트창</td></a>
+            <td class="board__content-column" style="cursor: pointer" onClick="window.open('https://techrecipe.co.kr/posts/17313','','')">햇빛 조명을 그대로 본뜬 스마트창</td></a>
             <td class="board__content-column">Tech Recipe</td>
             <td class="board__content-column">2020.6.6</td>
             
