--- a/news.html
+++ b/news.html
@@ -63,7 +63,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container" style="margin-left: 0;">
-      <a class="navbar-brand js-scroll-trigger navbar-board" href="#page-top">Sunny Five</a>
+      <a class="navbar-brand js-scroll-trigger navbar-board" href="./index.html#page-top">Sunny Five</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
