--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 
   <!-- Custom styles for this template -->
   <link href="css/new-age.css" rel="stylesheet">
+  <link rel="icon" 
+  type="image/png" 
+  href="/img/bgjh.JPG" />
+
 
 
   <style>
