--- a/map.html
+++ b/map.html
@@ -220,6 +220,30 @@ var markerData = [
             url: "https://www.youtube.com/embed/Zlxa4-BTPAQ",
             title: "Busan Citizen Park",
             nation:"Korea"
+        },
+        {
+            lat: 35.658182,
+            lng: 139.758729,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/3mfWO1CwxpI",
+            title: "Tokyo Shiodome Railway",
+            nation:"Japan"
+        },
+        {
+            lat: 35.071355,
+            lng: 139.541443,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/CWNjN2bYzsA",
+            title: "Mt. Hiroshige of Mt. Fuji",
+            nation:"Japan"
+        },
+        {
+            lat: 32.796601,
+            lng: 130.703701,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/1_40EYOldbY",
+            title: "Kumamoto City Shirakawa, RKK rooftop, Shirakawa-Changrokyo Bridge",
+            nation:"Japan"
         }
 
 
