--- a/map.html
+++ b/map.html
@@ -176,6 +176,13 @@ var markerData = [
             title: "Bodo harbor KF",
             nation:"Norway"
         }, {
+            lat: 67.289901,
+            lng: 14.398237,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/yMSc-qqW3To",
+            title: "Geirangerfjord cruise port, Geiranger",
+            nation:"Norway"
+        }, {
             lat: 46.521178,
             lng: 6.636441,
             icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
@@ -243,6 +250,22 @@ var markerData = [
             icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
             url: "https://www.youtube.com/embed/1_40EYOldbY",
             title: "Kumamoto City Shirakawa, RKK rooftop, Shirakawa-Changrokyo Bridge",
+            nation:"Japan"
+        },
+        {
+            lat: 35.503667,
+            lng: 138.776795,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/yOKn755TA3U",
+            title: "Mt.Fuji Panoramic Ropeway",
+            nation:"Japan"
+        },
+        {
+            lat: 34.733428,
+            lng: 135.500188,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/DYk9RVhr9sc",
+            title: "Shin-Osaka Station",
             nation:"Japan"
         }
 
