--- a/map.html
+++ b/map.html
@@ -267,6 +267,62 @@ var markerData = [
             url: "https://www.youtube.com/embed/DYk9RVhr9sc",
             title: "Shin-Osaka Station",
             nation:"Japan"
+        },
+        {
+            lat: 36.139893,
+            lng: 135.258576,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/PG8kZQ2EkSQ",
+            title: "Takayama Jinya",
+            nation:"Japan"
+        },
+        {
+            lat: 34.245220,
+            lng: 134.883358,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/ZOn7EVp9248",
+            title: "Awaji Island Monkey Center",
+            nation:"Japan"
+        },
+        {
+            lat: 34.680655,
+            lng: 135.202896,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/TsumMLWIsmM",
+            title: "Kobe Port Terminal",
+            nation:"Japan"
+        },
+        {
+            lat: 33.852062,
+            lng: 132.786447,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/cqjaUAloHzQ",
+            title: "Dogo Onsen Main Building",
+            nation:"Japan"
+        },
+        {
+            lat: 33.852062,
+            lng: 132.786447,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/vM7_-e0gdsc",
+            title: "Dogo Onsen Main Building front camera",
+            nation:"Japan"
+        },
+        {
+            lat: 32.214401,
+            lng: 130.762849,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/dXZ3ns5v-e8",
+            title: "Hitoyoshi City",
+            nation:"Japan"
+        },
+        {
+            lat: 35.141350,
+            lng: 138.692828,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/jnuacQgCEEA",
+            title: "Tagunoura Port",
+            nation:"Japan"
         }
 
 
