--- a/map.html
+++ b/map.html
@@ -323,6 +323,46 @@ var markerData = [
             url: "https://www.youtube.com/embed/jnuacQgCEEA",
             title: "Tagunoura Port",
             nation:"Japan"
+        },
+        {
+            lat: 36.566461,
+            lng: 136.659937,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/TjyrhHdTJVY",
+            title: "Kanazawa Castle Park",
+            nation:"Japan"
+        },
+        {
+            lat: 26.686426,
+            lng: 127.876092,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/ZrJyATrrKVs",
+            title: "Marine Expo Park Tropical Dream Center",
+            nation:"Japan"
+        },
+        {
+            lat: 37.049406,
+            lng: 140.040905,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/M7htV04x6Z8",
+            title: "HOTEL MORI NO KAZE NASU",
+            nation:"Japan"
+        },
+        {
+            lat: 37.754832,
+            lng: 140.465908,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/iJgNyAuIdos",
+            title: "Gurutto Fukushima",
+            nation:"Japan"
+        },
+        {
+            lat: 32.745784,
+            lng: 129.868686,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/7rATmPOOXSo",
+            title: "Nagasaki Port",
+            nation:"Japan"
         }
 
 
