--- a/map.html
+++ b/map.html
@@ -363,6 +363,22 @@ var markerData = [
             url: "https://www.youtube.com/embed/7rATmPOOXSo",
             title: "Nagasaki Port",
             nation:"Japan"
+        },
+        {
+            lat: 36.348395,
+            lng: 138.597026,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/Pm_RPOVlbGQ",
+            title: "Japan Nagano Prefecture Karuizawa Town",
+            nation:"Japan"
+        },
+        {
+            lat: 35.689683,
+            lng: 139.700748,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/BQYKarjjWi0",
+            title: "Tokyo Shinjuku JR",
+            nation:"Japan"
         }
 
 
