--- a/index.html
+++ b/index.html
@@ -197,35 +197,35 @@
           <div class="container-fluid">
             <div class="row">
               <div class="intro">
-              <h3 class="mhover">삼성전자 무선사업부 <br> HW<br> Tennis <br> Soju</h3>
+              <h3 class="mhover">Samsung Electronics, <br> Mobile Communications Business <br> HardWare <br> Tennis <br> Hard Drinker</h3>
 
               <div class="col-lg-4 bgmj">
                 <div class="feature-item">
                   <!--<i class="icon-screen-smartphone text-primary"></i>-->
-                  <h3 class="member">김민준 CEO</h3>
+                  <h3 class="member">Minjun Kim CEO</h3>
                   <!--<p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>-->
                 </div>
               </div>
             </div>
             <div class="intro">
-              <h3 class="mhover">삼성전자 VD사업부 <br> SW<br> CL <br> SoMack</h3>
+              <h3 class="mhover">Samsung Electronics, <br> Visual Display Business <br> Software <br> Idea Bank <br> </h3>
 
               <div class="col-lg-4 bgsy">
                 <div class="feature-item">
                   <!--<i class="icon-camera text-primary"></i>-->
-                  <h3 class="member">박수연 COO</h3>
+                  <h3 class="member">Sooyeon Park COO</h3>
                   <!--<p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>-->
                 </div>
               </div>
             </div>
               
             <div class="intro">
-              <h3 class="mhover">삼성전자 의료기기사업부 <br> 기계공학,열해석<br> 사업부장상 <br> Soju</h3>
+              <h3 class="mhover">Samsung Electronics, <br> Health & Medical Equipment Business <br> Mechanical design, Thermal analysis<br> Received the business manager award <br> </h3>
 
               <div class="col-lg-4 bgts">
                 <div class="feature-item">
                   <!--<i class="icon-camera text-primary"></i>-->
-                  <h3 class="member">조태식 CSO</h3>
+                  <h3 class="member">Taesik Cho CSO</h3>
                   <!--<p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>-->
                 </div>
               </div>
@@ -234,23 +234,23 @@
 
             <div class="row">
               <div class="intro2">
-                <h3 class="mhover">삼성전자 Samsung Research <br> SW<br> app개발,CA <br> Soju</h3>
+                <h3 class="mhover">Samsung Electronics, <br> Samsung Research <br> <br> application development, ChangeAgent <br> </h3>
 
               <div class="col-lg-6 bgjh">
                 <div class="feature-item">
                   <!--<i class="icon-present text-primary"></i>-->
-                  <h3 class="member">한정호 CMO</h3>
+                  <h3 class="member">Jeongho Han CMO</h3>
                   <!--<p class="text-muted">As always, this theme is free to download and use for any purpose!</p>-->
                 </div>
               </div>
               </div>
               <div class="intro2">
-                <h3 class="mhover">삼성전자 Samsung Research <br> SW<br> AI, 자율주행 <br> no alcohol</h3>
+                <h3 class="mhover">Samsung Electronics, <br> Samsung Research <br> <br> AI, Autonomous driving <br> </h3>
 
               <div class="col-lg-6 bgmk">
                 <div class="feature-item">
                   <!--<i class="icon-lock-open text-primary"></i>-->
-                  <h3 class="member">김명겸 CTO</h3>
+                  <h3 class="member">Myungyum Kim CTO</h3>
                   <!--<p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>-->
                 </div>
               </div>
