--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="intro">
-              <h3 class="mhover">Samsung Electronics, <br> Mobile Communications Business <br> HardWare <br> Tennis <br> Hard Drinker</h3>
+              <h3 class="mhover">Samsung Electronics, <br> Mobile Communications Business <br> Hardware <br> Tennis <br> Hard Drinker</h3>
 
               <div class="col-lg-4 bgmj">
                 <div class="feature-item">
@@ -234,7 +234,7 @@
 
             <div class="row">
               <div class="intro2">
-                <h3 class="mhover">Samsung Electronics, <br> Samsung Research <br> <br> application development, ChangeAgent <br> </h3>
+                <h3 class="mhover">Samsung Electronics, <br> Samsung Research <br> Software<br> application development, ChangeAgent <br> </h3>
 
               <div class="col-lg-6 bgjh">
                 <div class="feature-item">
@@ -245,7 +245,7 @@
               </div>
               </div>
               <div class="intro2">
-                <h3 class="mhover">Samsung Electronics, <br> Samsung Research <br> <br> AI, Autonomous driving <br> </h3>
+                <h3 class="mhover">Samsung Electronics, <br> Samsung Research <br> Software<br> AI, Autonomous driving <br> </h3>
 
               <div class="col-lg-6 bgmk">
                 <div class="feature-item">
