--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="intro">
-              <h3 class="mhover">Samsung Electronics, <br> Mobile Communications Business <br> Hardware <br> Tennis <br> Hard Drinker</h3>
+              <h3 class="mhover"> - Samsung Electronics, Mobile Communications Business <br> - Hardware <br> - Tennis <br> - Hard Drinker</h3>
 
               <div class="col-lg-4 bgmj">
                 <div class="feature-item">
@@ -208,7 +208,7 @@
               </div>
             </div>
             <div class="intro">
-              <h3 class="mhover">Samsung Electronics, <br> Visual Display Business <br> Software <br> Idea Bank <br> </h3>
+              <h3 class="mhover"> - Samsung Electronics, Visual Display Business <br> - Software <br> - Idea Bank <br> </h3>
 
               <div class="col-lg-4 bgsy">
                 <div class="feature-item">
@@ -220,7 +220,7 @@
             </div>
               
             <div class="intro">
-              <h3 class="mhover">Samsung Electronics, <br> Health & Medical Equipment Business <br> Mechanical design, Thermal analysis<br> Received the business manager award <br> </h3>
+              <h3 class="mhover"> - Samsung Electronics, Health & Medical Equipment Business <br> - Mechanical design, Thermal analysis<br> - Received the business manager award <br> </h3>
 
               <div class="col-lg-4 bgts">
                 <div class="feature-item">
@@ -234,18 +234,18 @@
 
             <div class="row">
               <div class="intro2">
-                <h3 class="mhover">Samsung Electronics, <br> Samsung Research <br> Software<br> application development, ChangeAgent <br> </h3>
+                <h3 class="mhover"> - Samsung Electronics, Samsung Research <br> - Software <br> - application development, ChangeAgent <br> </h3>
 
               <div class="col-lg-6 bgjh">
                 <div class="feature-item">
                   <!--<i class="icon-present text-primary"></i>-->
-                  <h3 class="member">Jeongho Han CMO</h3>
+                  <h3 class="member">Daniel Han CMO</h3>
                   <!--<p class="text-muted">As always, this theme is free to download and use for any purpose!</p>-->
                 </div>
               </div>
               </div>
               <div class="intro2">
-                <h3 class="mhover">Samsung Electronics, <br> Samsung Research <br> Software<br> AI, Autonomous driving <br> </h3>
+                <h3 class="mhover"> - Samsung Electronics, Samsung Research <br> - Software<br> - AI, Autonomous driving <br> </h3>
 
               <div class="col-lg-6 bgmk">
                 <div class="feature-item">
